# neovui

./: .gitignore  Cargo.toml
src/: circle.rs  lib.rs  main.rs  widget.rs
src/widget/: circle.rs  grid.rs  shell.rs  style.rs
