[package]
name = "neovui"
version = "0.1.0"
authors = ["GuoHao <guohao_117@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { path = "../iced" }
iced_native = { path = "../iced/native" }
iced_graphics = { path = "../iced/graphics" }
